--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "geckoterminal-api",
   "version": "1.0.0",
   "description": "A Node.js wrapper for the Geckoterminal API",
-  "main": "dist/index.js",
-  "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
   "files": [
     "dist",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc --outDir dist/esm",
+    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "test": "jest --config jest.config.cjs",
     "test:watch": "jest --watch",
     "lint": "eslint src"
